<?xml version="1.0"?>
<package format="2">
  <name>neuvition_driver</name>
  <version>1.0.0</version>
  <description>
   ROS driver for Neuvition LiDARs.
  </description>
  <maintainer email="info@neuvition.com">neuvition</maintainer>
  <author>neuvition</author>
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  

  

  <depend>dynamic_reconfigure</depend>

  <depend>pluginlib</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>

  <exec_depend>roscpp</exec_depend>
<exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export><nodelet plugin="${prefix}/nodelet_neuvition.xml"/></export>

 
</package>
